--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,12 @@
         "https://www.youtube.com/*"
     ],
     "action": {
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "icon16.png",
+            "48": "icon48.png",
+            "128": "icon128.png"
+        }
     },
     "background": {
         "service_worker": "background.js"
